--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss-cli": "^8.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-image-crop": "^9.0.4",
     "react-infinite-scroll-component": "^6.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
