--- a/package.json
+++ b/package.json
@@ -11,17 +11,16 @@
     "autoprefixer": "^10.2.5",
     "axios": "^0.21.1",
     "firebase": "^8.3.1",
-    "formik": "^2.2.6",
+    "formik": "2.2.9",
     "framer-motion": "^4.0.0",
     "mongoose": "^5.12.2",
     "postcss-cli": "^8.3.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-image-crop": "^9.0.4",
-    "react-infinite-scroll-component": "^6.0.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "tailwindcss": "^2.0.4",
+    "react-router-dom": "6.3.0",
+    "react-scripts": "5.0.0",
+    "tailwindcss": "3.0.23",
     "web-vitals": "^1.1.1",
     "yup": "^0.32.9"
   },
